--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sugandha Bariar Profile</title>
-  <link rel="icon" href="sugandha.jpg"/>
+  <link rel="icon" href="./Images/sugandha.jpg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -18,7 +18,7 @@
       </nav>
 
     <header>
-      <img src="./images/sugandha.jpg" alt="Picture of Sugandha Bariar" height="250px" width="20%" title="Sugandha Bariar">
+      <img src="./Images/sugandha.jpg" alt="Picture of Sugandha Bariar" height="250px" width="20%" title="Sugandha Bariar">
       <h1 class="tag name">Sugandha Bariar, a Full Stack Developer</h1>
       <details>
         <summary>Location</summary>
@@ -94,19 +94,27 @@
       </ul>--> 
       <center>
         <a href="https://www.facebook.com/sugandha.sinha2/" target="_blank">
-            <img src="./images/fbook.png" alt="facebook" title="facebook" height="20px" width="20px"/>
+            <img src="./Images/fbook.png" alt="facebook" title="facebook" height="20px" width="20px"/>
         </a>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://github.com/sugandha2022/SUGANDHA_DEV_2022/" target="_blank">
-            <img src="./images/github.png" alt="git-hub" title="git-hub" height="20px" width="20px"/>
+            <img src="./Images/github.png" alt="git-hub" title="git-hub" height="20px" width="20px"/>
         </a>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://stackoverflow.com/users/19415648/sugandha-bariar" target="_blank">
-            <img src="./images/s-overflow.png" alt="stack-overflow" title="stack-overflow" height="20px" width="20px"/>
+            <img src="./Images/s-overflow.png" alt="stack-overflow" title="stack-overflow" height="20px" width="20px"/>
         </a>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://www.linkedin.com/in/sugandha-sinha-45b7b218/" target="_blank">
-            <img src="./images/linked-in.png" alt="linked-in" title="linked-in" height="20px" width="20px"/>
+            <img src="./Images/linked-in.png" alt="linked-in" title="linked-in" height="20px" width="20px"/>
+        </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/sugandhabariar/" target="_blank">
+            <img src="./Images/insta.png" alt="linked-in" title="linked-in" height="20px" width="20px"/>
+        </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/SugandhaBariar" target="_blank">
+            <img src="./Images/twitt.png" alt="linked-in" title="linked-in" height="20px" width="20px"/>
         </a>
        
     </center>
